Bug 480743 - Elisa: Pressing Play on Final Song on the Playlist panel doesn't start the song from the beginning if the Song has completed
Summary: Elisa: Pressing Play on Final Song on the Playlist panel doesn't start the so...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.95
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-02 17:05 UTC by Timothy Arnold
Modified: 2024-04-02 17:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Elisa Video showing pressing the play button resulting in no playback of the completed song (1.38 MB, video/webm)
2024-02-02 17:12 UTC, Timothy Arnold
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timothy Arnold 2024-02-02 17:05:38 UTC
SUMMARY

Attempting to play a the final song on a playlist that has already completed by pressing the "Play" button on the playlist panel doesn't restart the song.


STEPS TO REPRODUCE
1.  Open Elisa
2.  Load a Playlist
3.  Play the Last Song on the Playlist to completion
4.  Attempt to play the song again by pressing the play button next to the song on the playlist panel

OBSERVED RESULT
The song doesn't play from the beginning but remains at the end of the song

EXPECTED RESULT
The song would play from the beginning

*APPLICATION BUILD INFORMATION*
Elisa Version: 24.04.70
Qt Version: 6.6.0 (built against 6.6.0)
KDE Frameworks Version 6.0.0

Built using kdesrc-build and using the master branch


SOFTWARE/OS VERSIONS

Operating System: Fedora Linux 39
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.113.0
Qt Version: 5.15.12
Kernel Version: 6.6.13-200.fc39.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 2700X Eight-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 590 Series
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: X470 AORUS GAMING 7 WIFI

ADDITIONAL INFORMATION
Comment 1 Timothy Arnold 2024-02-02 17:12:01 UTC
Created attachment 165479 [details]
Elisa Video showing pressing the play button resulting in no playback of the completed song

My original video was too large it appears. adding a shorter on
Comment 2 Jack Hill 2024-02-02 19:03:58 UTC
Thanks for reporting this. This bug should be fixed by this MR https://invent.kde.org/multimedia/elisa/-/merge_requests/543 (specifically the last commit).
Comment 3 Jack Hill 2024-03-01 12:35:13 UTC
Git commit c98b65862379a3a8fabcb78e84bca7c16ac01417 by Jack Hill.
Committed on 01/03/2024 at 12:35.
Pushed by jackh into branch 'master'.

Don't skip to the end when playing the same track twice in a row

If the QMediaPlayer mediaStatus is EndOfMedia and the source is set to the
same value as it was before, the media player instantly jumps to the end.
This means we effectively skip the track when trying to play for a second
time.

Work around for https://bugreports.qt.io/browse/QTBUG-121355

M  +8    -1    src/audiowrapper_qtmultimedia.cpp

https://invent.kde.org/multimedia/elisa/-/commit/c98b65862379a3a8fabcb78e84bca7c16ac01417
Comment 4 Jack Hill 2024-04-02 17:01:36 UTC
Git commit aea65de5906f441bcf0c1727d1d7e064e723ea4d by Jack Hill.
Committed on 02/04/2024 at 16:48.
Pushed by jackh into branch 'release/24.02'.

Don't skip to the end when playing the same track twice in a row

If the QMediaPlayer mediaStatus is EndOfMedia and the source is set to the
same value as it was before, the media player instantly jumps to the end.
This means we effectively skip the track when trying to play for a second
time.

Work around for https://bugreports.qt.io/browse/QTBUG-121355
(cherry picked from commit c98b65862379a3a8fabcb78e84bca7c16ac01417)

M  +8    -1    src/audiowrapper_qtmultimedia.cpp

https://invent.kde.org/multimedia/elisa/-/commit/aea65de5906f441bcf0c1727d1d7e064e723ea4d